--- a/Contactenos.html
+++ b/Contactenos.html
@@ -78,7 +78,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Inicio.html">Inicio <span class="sr-only">(actual)</span></a>
+                    <a class="nav-link" href="index.html">Inicio <span class="sr-only">(actual)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="SobreNosotros.html">Sobre Nosotros</a>
