--- a/Contactenos.html
+++ b/Contactenos.html
@@ -103,7 +103,7 @@
                   </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Tucorreo@example.com">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Tucorreo@Ejemplo.com">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Tipo de consulta</label>
